# QGEL

./: .gitignore  README.md  TODO.md  __init__.py  discrete_walk.py  link_prediction.py  pyproject.toml
tests/: testdtw.py
