[project]
name = "qgel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ket-lang[plot]>=0.9.2.8",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numdifftools>=0.9.42",
    "numpy>=2.4.2",
    "pdflatex>=0.1.3",
    "pylatexenc>=2.10",
    "pyqt6>=6.10.2",
]
